PR c++/13451 	* parser.c (cp_parser_class_head): Reorder logic to check for 	invalid qualification.
	PR c++/13451
	* g++.dg/template/class2.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75440 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-05  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13451
+	* parser.c (cp_parser_class_head): Reorder logic to check for
+	invalid qualification.
+
 2004-01-04  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13157
