--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-05  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13451
+	* g++.dg/template/class2.C: New test.
+
 2004-01-05  Nathan Sidwell  <nathan@codesourcery.com>
 	Richard Sandiford <rsandifo@redhat.com>
 
