--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/compat/sdata-section.h: Declare 'abort'.
+
 2004-01-05  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/12132
