2004-01-05  Andrew Pinski  <apinski@apple.com>
        * configure.in: Check for csin in -lmx also.
        * configure: Regenerate.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75456 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/libgfortran/ChangeLog
+++ b/tree-ssa-20020619-branch/libgfortran/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-05  Andrew Pinski  <apinski@apple.com>
+
+	* configure.in: Check for csin in -lmx also.
+	* configure: Regenerate.
+
 2004-01-01  Paul Brook  <paul@codesourcery.com>
 
 	* io/list_read.c (find_nml_node): Make static.
