PR c++/12816 	* class.c (build_vtbl_ref_1): Do not unconditionally mark vtable 	references as constant.
	PR c++/12815
	* g++.dg/rtti/typeid4.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75457 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-05  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/12816
+	* class.c (build_vtbl_ref_1): Do not unconditionally mark vtable
+	references as constant.
+
 	PR c++/12132
 	* parser.c (cp_parser_explicit_instantiation): Improve error
 	recovery.
