PR c++/13057 	* class.c (build_clone): Copy type attributes from the original 	function to the clone.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75460 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-05  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13057
+	* class.c (build_clone): Copy type attributes from the original
+	function to the clone.
+	
 	PR c++/12815
 	* class.c (build_vtbl_ref_1): Do not unconditionally mark vtable
 	references as constant.
