contrib/ 2004-01-05  Kelley Cook  <kcook@gcc.gnu.org> 	* gcc_update (files_generated): Revert 2003-12-18 change.
gcc/ada/
2004-01-05  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in: Revert stamp-xgnatug change from 2003-12-18.
	Update comment and copyright date.
	* stamp-xgnatug: Delete.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75461 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-05  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* gcc_update (files_generated): Revert 2003-12-18 change.
+
 2004-01-03  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* gcc_update (files_and_dependencies): For gcc directory,
