* gcc.dg/i386-sse-5.c: New test 	* g++.dg/eh/simd-1.c: Add -w argument for i386.
	* i386.c (init_cumulative_args):  Add handling of MMX_REGPARM.
	(function_arg_advance):  Do not pass aggregates in SSE; deal handling
	of MMX_REGPARM.
	(function_arg): Add new warnings about ABI changes;  fix SSE_REGPARM;
	add MMX_REGPARM.
	* i386.h (ix86_args): Add mmx_words/mmx_regs/mmx_regno fields.
	(SSE_REGPARM_MAX): Default to 3 on i386 -msse ABI.
	(MMX_REGPARM_MAX): Similarly for -mmmx.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75467 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-06  Jan Hubicka  <jh@suse.cz>
+
+	* gcc.dg/i386-sse-5.c: New test
+	* g++.dg/eh/simd-1.c: Add -w argument for i386.
+
 2004-01-05  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/12815
