--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-06  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (init_cumulative_args):  Add handling of MMX_REGPARM.
+	(function_arg_advance):  Do not pass aggregates in SSE; deal handling
+	of MMX_REGPARM.
+	(function_arg): Add new warnings about ABI changes;  fix SSE_REGPARM;
+	add MMX_REGPARM.
+	* i386.h (ix86_args): Add mmx_words/mmx_regs/mmx_regno fields.
+	(SSE_REGPARM_MAX): Default to 3 on i386 -msse ABI.
+	(MMX_REGPARM_MAX): Similarly for -mmmx.
+
 2004-01-05  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/sh/linux.h: Fix comment formatting.
