--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
+
+	* config/m32r/m32r.h (TRAMPOLINE_LINE_SIZE): Changed
+
 2004-01-06  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (init_cumulative_args):  Add handling of MMX_REGPARM.
