--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,19 @@
 2004-01-06  Michael Koch  <konqueror@gmx.de>
 
+	* gnu/java/net/protocol/file/Connection.java:
+	Reformated copyright.
+	(hdrHash): Removed.
+	(hdrVec): Removed.
+	(gotHeaders): Removed.
+	(getHeaderField): Removed.
+	(getHeaderField): Removed.
+	(getHeaderFieldKey): Removed.
+	(getKey): Removed.
+	(getField): Removed.
+	(getHeaders): Removed.
+
+2004-01-06  Michael Koch  <konqueror@gmx.de>
+
 	* javax/print/attribute/standard/DateTimeAtCompleted.java,
 	javax/print/attribute/standard/DateTimeAtCreation.java,
 	javax/print/attribute/standard/DateTimeAtProcessing.java,
