--- a/gcc/doc/install.texi
+++ b/gcc/doc/install.texi
@@ -1089,7 +1089,7 @@ enable optimization. When coverage is enabled, the default level is
 without optimization.
 
 @item --enable-gather-detailed-mem-stats
-When this option is specfied more detailed information on memory
+When this option is specified more detailed information on memory
 allocation is gathered.  This information is printed when using
 @option{-fmem-report}. 
 
