--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-06  Jan Hubicka  <jh@suse.cz>
+
+	PR target/10301
+	* config.gcc: Accept opteron and athlon-64 as variants
+	of k8.
+	* i386.c (override_options): Likewise.
+	* invoke.texi (i386 -mtune): Expand documentation.
+
 2004-01-06  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* alias.c: Fix comment typos.
