--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Graydon Hoare  <graydon@redhat.com>
+
+	* javax/swing/JLayeredPane.java: Fix semantics, add javadocs.
+
 2004-01-06  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/java/net/protocol/file/Connection.java:
