* invoke.texi:  Remove typo in last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75479 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-06  Jan Hubicka  <jh@suse.cz>
 
+	* invoke.texi:  Remove typo in last change.
+
 	PR target/10301
 	* config.gcc: Accept opteron and athlon-64 as variants
 	of k8.
