* dwarf2out.c (add_const_value_attribute): Remove incorrect comment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75483 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Geoffrey Keating  <geoffk@apple.com>
+
+	* dwarf2out.c (add_const_value_attribute): Remove incorrect comment.
+
 2004-01-06  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/xcoff.h (EXTRA_SECTION_FUNCTIONS): Split each
