--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-06  Jan Hubicka  <jh@suse.cz>
+
+	* Makefile.in (STAGEPROFILE_FLAGS_TO_PASS): Use -fprofile-generate.
+	(STAGEFEEDBACK_FLAGS_TO_PASS): Use -fprofile-use.
+
 2004-01-06  Geoffrey Keating  <geoffk@apple.com>
 
 	* config/rs6000/rs6000.md (floatsitf2): Use expand_float rather
