* gcc.dg/winline-7.c: Don't cast void * to int.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75503 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* gcc.dg/winline-7.c: Don't cast void * to int.
+
 2004-01-06  Jan Hubicka  <jh@suse.cz>
 
 	* gcc.dg/i386-sse-5.c: New test
