2004-01-07  Michael Koch  <konqueror@gmx.de>
	* java/net/ServerSocket.java (isBound): Fixed documentation.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75506 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-07  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/ServerSocket.java (isBound): Fixed documentation.
+
 2004-01-07  Sascha Brawer  <brawer@dandelis.ch>
 
 	* javax/swing/DefaultBoundedRangeModel.java: Documented API.
