2004-01-07  Michael Koch  <konqueror@gmx.de>
	* java/lang/reflect/Array.java: Merged documentation with classpath.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75512 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-07  Michael Koch  <konqueror@gmx.de>
 
+	* java/lang/reflect/Array.java: Merged documentation with classpath.
+
+2004-01-07  Michael Koch  <konqueror@gmx.de>
+
 	* java/text/CollationElementIterator.java
 	(textIndex): Renamed from index.
 	* java/text/CollationKey.java
