PR c/12165 	* c-decl.c (grokdeclarator): Take type qualifiers of typedefed 	array type from the array element type.
testsuite:
	* gcc.dg/array-quals-1.c, gcc.dg/c90-idem-qual-3.c,
	gcc.dg/c99-idem-qual-3.c: New tests.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75514 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-07  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	PR c/12165
+	* c-decl.c (grokdeclarator): Take type qualifiers of typedefed
+	array type from the array element type.
+
 2004-01-07  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/rs6000.c (rs6000_dbx_register_number): New function.
