* link.c [sgi] (shared_libgnat_default): Change to STATIC.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75516 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-07  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* link.c [sgi] (shared_libgnat_default): Change to STATIC.
+
 2004-01-05  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Make-lang.in: Revert stamp-xgnatug change from 2003-12-18. 
