--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-07  David Jee  <djee@redhat.com>
+
+	* java/awt/Container.java
+	(update): Clear only the clipped region, instead of clearing the
+	entire Container.
+	(visitChildren): Visit children in descending order.
+
 2004-01-07  Michael Koch  <konqueror@gmx.de>
 
 	* java/lang/reflect/Array.java: Merged documentation with classpath.
