PR c/6024 	* c-typeck.c (comptypes): Only treat enumerated types in the same 	translation unit as compatible with each other when they are the 	same type. 	* doc/extend.texi: Update.
f:
	* com.h (ffecom_gfrt_basictype): Correct return type.

testsuite:
	* gcc.dg/enum-compat-1.c: New test.
	* gcc.c-torture/execute/builtin-types-compatible-p.c: Update.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75521 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/extend.texi
+++ b/gcc/doc/extend.texi
@@ -5265,8 +5265,10 @@ similarity.  Consequently, @code{short *} is not similar to
 @code{short **}.  Furthermore, two types that are typedefed are
 considered compatible if their underlying types are compatible.
 
-An @code{enum} type is considered to be compatible with another
-@code{enum} type.  For example, @code{enum @{foo, bar@}} is similar to
+An @code{enum} type is not considered to be compatible with another
+@code{enum} type even if both are compatible with the same integer
+type; this is what the C standard specifies.
+For example, @code{enum @{foo, bar@}} is not similar to
 @code{enum @{hot, dog@}}.
 
 You would typically use this function in code whose execution varies
