--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2004-01-07  Joseph S. Myers  <jsm@polyomino.org.uk>
 
+	PR c/6024
+	* c-typeck.c (comptypes): Only treat enumerated types in the same
+	translation unit as compatible with each other when they are the
+	same type.
+	* doc/extend.texi: Update.
+
+2004-01-07  Joseph S. Myers  <jsm@polyomino.org.uk>
+
 	PR c/12165
 	* c-decl.c (grokdeclarator): Take type qualifiers of typedefed
 	array type from the array element type.
