--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-07  Joseph S. Myers  <jsm@polyomino.org.uk>
 
+	PR c/6024
+	* gcc.dg/enum-compat-1.c: New test.
+	* gcc.c-torture/execute/builtin-types-compatible-p.c: Update.
+
+2004-01-07  Joseph S. Myers  <jsm@polyomino.org.uk>
+
 	PR c/12165
 	* gcc.dg/array-quals-1.c, gcc.dg/c90-idem-qual-3.c,
 	gcc.dg/c99-idem-qual-3.c: New tests.
