--- a/gcc-3_3-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_3-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-07  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* configure.in: Add io bits to linux cross config.
+	* configure: Regenerate.
+
 2004-01-07  Paolo Carlini  <pcarlini@suse.de>
 	    Petur Runolfsson  <peturr02@ru.is>
 	
